# pc-monitor

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: README.zh-CN.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  sqlite3.lib  tauri.conf.json
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/constants/: db.rs  mod.rs  report.rs  window.rs
src-tauri/src/core/: db.rs  mod.rs  report.rs  schedule.rs  stats.rs  task.rs
src-tauri/src/utils/: autostart.rs  db.rs  file.rs  logging.rs  mod.rs  singleton.rs  test.rs  window.rs
src-tauri/templates/: template_report_overview.html
src/components/: Dashboard.vue  ExportReport.vue  Settings.vue  WindowCtrls.vue
src/components/chart/: BarChart.vue  DoughnutChart.vue
src/components/dashboard/: CompareCard.vue  index.vue
src/components/dashboard/chart/: BarChart.vue  DoughnutChart.vue
src/constants/: dashboard.ts  export.ts  nav.ts
src/locales/: en.json  zh.json
src/router/: index.ts
src/stores/: setting.ts
src/style/: base.css
src/test/: date.js
src/types/: dashboard.ts  date.ts  export.ts  nav.ts
src/utils/: date.ts  format.ts
