[package]
name = "pc-monitor"
version = "0.1.0"
description = "PC Usage Statistics"
authors = ["Yang-ZhiHang"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pc_usage_statistics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
chrono = "0.4"                                      # Time
env_logger = "0.10"
log = "0.4"
rdev = "0.5"                                        # Cross-platform global hotkey/hook
rusqlite = "0.28"
sysinfo = "0.30"                                    # Process information
serde = { version = "1.0", features = ["derive"] }  # JSON serialization
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
parking_lot = "0.12.4"                              # User mode mutex
tauri-plugin-shell = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
] }
winreg = "0.55.0"
